Bug 1644678 - Don't set DEALLOCATE_CLIENT flag for SharedSurface_SurfaceTextures. r=sotaro

The flag is not required for SharedSurface_SurfaceTexture, as
GeckoSurfaceTexture is reference counted. When the GeckoSurface is
disposed on the client side it simply decrements the refcount of the
GeckoSurfaceTexture on the host side, which will remain alive until
the TextureHost's reference is also dropped.

Differential Revision: https://phabricator.services.mozilla.com/D79073